--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,4 +11,4 @@
 
 </div>
 
-<%= link_to image_tag("logo.jpg", alt: "Rails logo", width: "200px"),"https://rubyonrails.org/" %>
+<%= link_to image_tag("rubyparrot.gif", alt: "Rails logo", width: "200px"),"https://rubyonrails.org/" %>
